<resources>
    <string name="app_name">系统升级</string>
    <string name="image_content_description">description</string>
    <string name="progress_unit"            >%</string>
    <string name="progress_unit_data"       >%d%</string>
    <string name="colon"                    >:</string>
    <string name="dun"                      >、</string>
    <string name="dou"                      >，</string>
    <string name="brackets_left"            >(</string>
    <string name="brackets_right"           >)</string>
    <string name="letter_S"                 >S</string>
    <string name="month"                    >月</string>
    <string name="day"                      >日</string>
    <string name="hour"                     >时</string>
    <string name="minute"                   >分</string>
    <string name="second"                   >秒</string>
    <string name="hour_long"                >小时</string>
    <string name="minute_long"              >分钟</string>
    <string name="agree"                    >同意</string>
    <string name="agree_count"              >同意(%ds)</string>
    <string name="disagree"                 >不同意</string>
    <string name="cancel_count"             >取消(%ds)</string>
    <string name="cancel"                   >取消</string>
    <string name="confirm"                  >确定</string>
    <string name="confirm_count"            >确定(%ds)</string>
    <string name="confirm_count_big"        >确定(%ds)</string>
    <string name="details"                  >详情···</string>
    <string name="ignore"                   >忽略(%ds)</string>
    <string name="update_immediately"       >立即升级</string>
    <string name="update_immediately_count" >立即升级(%ds)</string>
    <string name="update_schedule"          >预约升级</string>
    <string name="update_schedule_cancel"   >取消预约</string>
    <string name="disclaimer_title"         >免责申明条款</string>
    <string name="details_title"            >版本详情</string>
    <string name="know"                     >我知道了</string>
    <string name="disclaimer_rescue_btn_count"    >同意(%ds)</string>
    <string name="disclaimer_rescue_btn"    >同意</string>
    <string name="disclaimer_rescue_title"  >远程救援任务说明</string>
    <string name="debug_notify"             >新任务弹框</string>
    <string name="debug_update_now"         >即将升级提醒</string>
    <string name="debug_precondition_ing"   >校验前置条件中···</string>
    <string name="debug_precondition_suc"   >校验前置条件成功</string>
    <string name="debug_low_storage_battery">蓄电池电量不足</string>
    <string name="debug_low_power_battery"  >动力电池电量不足</string>
    <string name="debug_enter_ota_fail"     >进OTA失败</string>
    <string name="debug_rollback_suc"       >回滚成功</string>
    <string name="debug_verify_power_off"   >有效性校验-下电</string>
    <string name="debug_pre_power_off"      >前置校验-下电</string>
    <string name="debug_downloading"        >下载中</string>
    <string name="debug_factory"            >工厂模式弹框</string>
    <string name="debug_exit_ota_fail"      >升级前退OTA失败</string>
    <string name="debug_cover"              >cover弹框</string>
    <string name="debug_schedule_silent"    >静默升级弹框</string>
    <string name="debug_power_on_fail"      >上电失败</string>
    <string name="debug_power_off_fail"     >下电失败</string>
    <string name="debug_guard"              >守护弹框</string>
    <string name="debug_details"            >详情弹框</string>
    <string name="debug_schedule_fire"      >预约时间到弹框</string>
    <string name="debug_schedule_fire_fail" >预约时间到,条件不满足</string>
    <string name="debug_icc_update"         >ICC主机升级</string>
    <string name="debug_cancel"             >退出Debug模式</string>
    <string name="debug_title"              >测试界面(点我关闭)</string>
    <string name="debug_disclaimer"         >免责申明</string>
    <string name="debug_install"            >install弹框</string>
    <string name="debug_schedule"           >设置预约时间</string>
    <string name="debug_install_result"     >升级结果弹框</string>
    <string name="debug_cancel_schedule"    >取消预约弹框</string>
    <string name="debug_schedule_suc"       >预约成功弹框</string>
    <string name="debug_test"               >临时测试</string>
    <string name="debug_cancel_sch_fail"    >取消预约失败</string>
    <string name="debug_cancel_sch_suc"     >取消预约成功</string>
    <string name="debug_update_suc"         >升级成功</string>
    <string name="debug_update_suc_power"   >升级成功下电失败</string>
    <string name="debug_task_verify"        >有效性失败</string>
    <string name="debug_rescue_fail"        >救援升级失败</string>
    <string name="debug_rescue"             >远程救援</string>
    <string name="debug_exit_ota_fail_update_suc"        >升级成功退ota失败</string>
    <string name="debug_exit_ota_fail_update_roll"       >回滚成功退ota失败</string>
    <string name="debug_exit_ota_fail_update_fail"       >回滚失败退ota失败</string>
    <string name="debug_power_off_fail_update_suc"       >升级成功下电失败</string>
    <string name="debug_power_off_fail_update_roll"      >回滚成功下电失败</string>
    <string name="debug_power_off_fail_update_fail"      >回滚失败下电失败</string>
    <string name="debug_audio"              >音频播放</string>
    <string name="debug_install_fail"       >回滚失败</string>
    <string name="debug_install_suc_power_notify"       >升级成功下电提醒</string>
    <string name="debug_roll_suc_power_notify"          >回滚成功下电提醒</string>
    <string name="debug_roll_fail_power_notify"         >回滚失败下电提醒</string>
    <string name="debug_fail_power_off"                 >进入升级前下电失败 </string>
    <string name="debug_versions"                       >大版本信息 </string>
    <string name="engine_del_pkg"           >删除本地下载包</string>
    <string name="engine_test_server"       >测试服务器</string>
    <string name="engine_check_precondition">检测前置条件</string>
    <string name="engine_title"             >工程模式(点我关闭)</string>
    <string name="engine_normal_check"      >常规任务检查</string>
    <string name="engine_rescue_check"      >救援任务检查</string>
    <string name="engine_clean_data"        >清除数据</string>
    <string name="engine_open_adb"          >打开ADB</string>
    <string name="engine_close_adb"         >关闭ADB</string>
    <string name="engine_enter_ota"         >进入OTA模式</string>
    <string name="engine_close_ota"         >退出OTA模式</string>
    <string name="engine_download"          >等待下载更新</string>
    <string name="engine_ui_follow"         >主题跟随</string>
    <string name="engine_ui_turn"           >主题切换</string>
    <string name="engine_kill_app"          >停止FOTA</string>
    <string name="engine_verify_task"       >校验任务有效性</string>
    <string name="engine_schedule"          >设置预约时间</string>
    <string name="engine_cancel_schedule"   >取消预约</string>
    <string name="engine_take_log"          >收集日志</string>
    <string name="engine_icc_version"       >主机版本</string>
    <string name="engine_icc_error_code"    >主机ErrorCode</string>
    <string name="engine_choose_uat"        >国内UAT</string>
    <string name="engine_choose_product"    >国内生产</string>
    <string name="engine_ecall"             >ECall事件</string>
    <string name="engine_end_ota"           >强退OTA升级</string>
    <string name="engine_del_file_ret"      >数据删除成功，主机将在3秒后重启</string>
    <string name="engine_insert_usb"        >请插入优盘</string>
    <string name="engine_copy_wait"         >检测到插入优盘, 正在拷贝请等待</string>
    <string name="engine_copy_progress"     >拷贝进度：</string>
    <string name="engine_copy_name"         >拷贝成功,压缩包名字：</string>
    <string name="engine_copy_fail"         >拷贝失败</string>
    <string name="engine_logs_fail"         >日志收集失败</string>
    <string name="engine_task_checking"     >任务检测中，请稍后使用！</string>
    <string name="engine_wait_download"     >等待下载更新</string>
    <string name="engine_download_soon"     >常规任务检测成功，即将进行任务下载...</string>
    <string name="engine_check_fail"        >检测任务失败！</string>
    <string name="engine_wait_init"         >请等待系统初始化完成后再使用</string>
    <string name="engine_downloading"       >下载更新中...</string>
    <string name="engine_download_suc"      >下载成功</string>
    <string name="engine_download_fail"     >下载失败</string>
    <string name="engine_pre_fail"          >前置条件校验失败</string>
    <string name="engine_pre_suc"           >前置条件校验成功</string>
    <string name="engine_close_count"       >校验结果3秒后自动关闭</string>
    <string name="engine_enter_ota_suc"     >进入OTA成功</string>
    <string name="engine_enter_ota_fail"    >进入OTA失败</string>
    <string name="engine_exit_ota_suc"      >退出OTA成功</string>
    <string name="engine_exit_ota_fail"     >退出OTA失败</string>
    <string name="engine_task_verify_suc"   >任务有效性校验成功</string>
    <string name="engine_task_verify_fail"  >任务有效性校验失败</string>
    <string name="engine_del_file_fail"     >文件删除失败，请查看是否无操作权限</string>
    <string name="engine_del_file_count"    >删除成功，删除文件数量：</string>
    <string name="engine_file_not_exist"    >下载文件不存在，无法删除！！</string>
    <string name="engine_dir_not_exist"     >下载目录不存在，无法删除！！</string>
    <string name="engine_service_conn_suc"  >连接服务器正常</string>
    <string name="engine_service_conn_fail" >无法连接服务器</string>
    <string name="engine_intl_uat"          >国外测试</string>
    <string name="engine_intl_product"      >国外生产</string>
    <string name="engine_test_local_port"   >测试apk端口</string>
    <string name="fail_power_on"            >上电失败</string>
    <string name="fail_factory_power"       >产线升级限制的下载时长已到达，中断下载</string>
    <string name="fail_enter_ota"           >进入升级模式失败</string>
    <string name="fail_task_verify"         >任务有效性校验失败</string>
    <string name="fail_exit_ota"            >退OTA模式失败</string>
    <string name="storage_battery_warn"     >蓄电池电量不足导致无法升级，请下次再升级</string>
    <string name="power_battery_warn"       >动力电池电量不足导致无法升级，请下次再升级</string>
    <string name="vehicle_state_power_off"  >车辆处于off状态</string>
    <string name="update_time"              >本次更新预计需要</string>
    <string name="check_precondition"       >检测升级前置条件</string>
    <string name="vehicle_entry_upgrade"    >车辆即将进入升级模式</string>
    <string name="no_mission_title"         >当前系统已是最新版本</string>
    <string name="schedule_suc"             >预约成功</string>
    <string name="update_remind"            >车辆即将进入ON挡升级···</string>
    <string name="schedule_silent"          >车辆正在初始化中，请勿操作车辆！</string>
    <string name="vehicle_recheck"          >车辆升级检查中···</string>
    <string name="power_off_fail"           >下电失败</string>
    <string name="enter_ota_fail"           >退OTA模式失败，请重启车辆</string>
    <string name="exit_ota_fail_before_update"  >升级模式退出失败</string>
    <string name="exit_ota_fail_update_suc"     >升级完成，升级模式退出失败</string>
    <string name="exit_ota_fail_update_roll"    >升级失败，升级模式退出失败</string>
    <string name="exit_ota_fail_update_fail"    >升级失败，升级模式退出失败，车辆存在问题</string>
    <string name="install_fail_sale_help">请联系您当地的服务站。</string>
    <string name="sale_help_phone">请联系您当地的服务站\n电话：400-002-2000</string>
    <string name="power_off_fail_update_suc"     >升级成功，下电失败\n请重启车辆</string>
    <string name="power_off_fail_update_roll"    >升级失败，下电失败</string>
    <string name="power_off_fail_update_fail"    >升级失败，下电失败，车辆存在问题</string>
    <string name="roll_back_fail_power_off_notify">升级失败，车辆正在下电</string>
    <string name="roll_back_suc_power_off_notify">升级失败，车辆正在下电</string>
    <string name="install_fail_content"          >升级失败，车辆存在问题</string>
    <string name="rollback_suc_content"          >升级失败</string>
    <string name="rollback_suc_sale_help"        >车辆已恢复升级前状态，请联系您当地的服务站。</string>
    <string name="audio_title"                   >音频说明</string>
    <string name="schedule_fire_title"      >您预约的系统升级时间已到</string>
    <string name="schedule_fire_info"       >倒计时20秒后将自动开始系统升级！</string>
    <string name="toast_notify_upgrade"     >车辆升级</string>
    <string name="toast_notify_info"        >发现新版本，是否立即查看</string>
    <string name="toast_notify_check"       >查看</string>
    <string name="version_list"             >历史版本</string>
    <string name="audio"                    >音频说明</string>
    <string name="new_mission_title"        >发现新版本</string>
    <string name="update_required_time"     >预计升级时间：</string>
    <string name="update_detail"            >详情></string>
</resources>