<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="debug_activity_view"
            type="com.carota.lib.executor.ui.activity.debugActivity.DebugActivity" />

        <variable
            name="debug_activity_viewModel"
            type="com.carota.lib.executor.ui.activity.debugActivity.DebugActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_shadow"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activity.MainActivity">

        <LinearLayout
            android:id="@+id/ll_column1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_size_50"
            android:layout_marginStart="@dimen/px_size_30"
            android:divider="@drawable/divider_drawable_40"
            android:orientation="vertical"
            android:showDividers="middle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_notify_dialog"
                style="@style/debug_button_500x80"
                android:text="@string/debug_notify"
                android:onClick="@{view->debug_activity_view.onNewTaskClicked()}"/>

            <Button
                android:id="@+id/btn_disclaimer_dialog"
                android:layout_marginTop="@dimen/px_size_10"
                style="@style/debug_button_500x80"
                android:text="@string/debug_disclaimer"
                android:onClick="@{view->debug_activity_view.onDisclaimerClicked()}"/>

            <Button
                android:id="@+id/btn_schedule_dialog"
                android:layout_marginTop="@dimen/px_size_10"
                style="@style/debug_button_500x80"
                android:text="@string/debug_schedule"
                android:onClick="@{view->debug_activity_view.onSetScheduleTimeClicked()}"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>